<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.62"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/portfolio"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/row1c0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.60"
                        android:padding="8dp"
                        android:text="@string/row1c0"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/portr1c1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.40"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/row2c0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.60"
                        android:padding="8dp"
                        android:text="@string/row2c0"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/portr2c1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.40"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/row3c0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.60"
                        android:padding="8dp"
                        android:text="@string/row3c0"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/portr3c1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.40"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/row4c0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.60"
                        android:padding="8dp"
                        android:text="@string/row4c0"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/portr4c1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.40"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/row5c0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.60"
                        android:padding="8dp"
                        android:text="@string/row5c0"
                        android:textColor="@color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/portr5c1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.40"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textSize="17sp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.38">

            <Button
                android:id="@+id/trade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/success"
                android:gravity="center_vertical"
                android:text="@string/trade"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>