<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    android:background="@color/navbarColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/navbarColor"
        android:elevation="12dp"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Stocks"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Headline"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/appIconContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/launcher"
        tools:srcCompat="@drawable/launcher" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/progressBar"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:id="@+id/initialHomeScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@+id/scrollView">

            <TextView
                android:id="@+id/todayDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="14dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/portfolioLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayHome"
                android:paddingStart="14dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/portfolio"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- First row -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- First column -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="14dp"
                        android:layout_marginBottom="2dp"
                        android:text="@string/net_worth"
                        android:textColor="@color/material_dynamic_neutral_variant50"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- Second column -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:layout_marginBottom="2dp"
                        android:text="@string/cash_balance"
                        android:textColor="@color/material_dynamic_neutral_variant50"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

                <!-- Second row -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- First column -->
                    <TextView
                        android:id="@+id/worth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="14dp"
                        android:layout_marginBottom="2dp"
                        android:textColor="@color/material_dynamic_neutral_variant50"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- Second column -->
                    <TextView
                        android:id="@+id/balance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:layout_marginBottom="2dp"
                        android:textColor="@color/material_dynamic_neutral_variant50"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/grayHome" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/portfolios"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/watchlistLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayHome"
                android:baselineAligned="false"
                android:paddingStart="14dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/favs"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favorites"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/finn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:layout_marginTop="16dp"
                android:text="@string/finn"
                android:textAlignment="center"
                android:textColor="@color/material_dynamic_neutral_variant50"
                android:textSize="17sp"
                android:textStyle="italic"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="65dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>