<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="389dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    app:cardElevation="12dp"
    app:contentPaddingBottom="15dp"
    app:contentPaddingTop="25dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="16dp">

            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/shares"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shares"
                android:textSize="17sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/dynamic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingEnd="32dp"
            android:paddingBottom="10dp"
            android:text="TextView"
            android:textAlignment="viewEnd"
            android:textSize="17sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/currStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingEnd="32dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buy"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/success"
                    android:text="@string/buy"
                    app:cornerRadius="5dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sell"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/success"
                    android:text="@string/sell"
                    app:cornerRadius="5dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>